# slothfulchat-web

./: .gitignore  .gitmodules  AGENTS.md  DESCOPED.md  FINDINGS.md  PATCHES.md  PLAN.md  README.md  RELEASING.md  SELFHOSTING.md  WEBXDC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/hooks/: session-start.sh  session-start.test.sh
.claude/workflows/: calls-impl.mjs  tracking-strip.mjs
.github/workflows/: ci.yml  deploy-next.yml  deploy-pages.yml  preview-cleanup.yml  preview-deploy.yml  publish-npm.yml
crates/tokio-wasm-shim/: Cargo.toml
crates/tokio-wasm-shim/src/: fs.rs  lib.rs  net.rs  opfs.rs  runtime.rs  task.rs  time.rs
docs/: audio-messages.md  calls.md  emoji-completion-menu.md  link-preview.md  translation-editor-design.md  translation-editor.md
docs/design/: translation-editor-design.md
feature/composer-completion/: .gitignore  README.md  index.html
infra/flagship/: Caddyfile  README.md  deploy-preview.sh  test-deploy-preview.sh
patches/core/: 0001-wasm-target-gate-native-only-deps-tokio-facade-rusql.patch  0002-wasm-deltachat-time-reads-the-clock-via-js-sys-Date..patch  0003-wasm-stub-HTTP-proxy-modules-rustls-ring-provider.patch  0004-wasm-fs-shim-integration-path_exists-ReadDir-stream-.patch  0005-wasm-IMAP-SMTP-through-a-WebSocket-TCP-proxy.patch  0006-wasm-read-the-JS-clock-everywhere-std-time-panics.patch  0007-wasm-route-blob-sync-fs-ops-through-the-memfs-shim.patch  0008-wasm-file-based-backup-export-import.patch  0009-wasm-VFS-agnostic-sqlite-backup-import-export.patch  0010-wasm-HTTP-via-browser-fetch.patch  0011-webimap-transport-madmail-HTTP-mail-access-next-to-I.patch  0012-webimap-fix-connectivity-badge-stuck-at-Connecting-U.patch  0013-webimap-treat-404-on-GET-DELETE-as-already-gone-not-.patch  0014-sticker-classify-.tgs-as-Sticker-honor-Chat-Content-.patch  0015-sticker-picker-list-animated-.tgs-stickers.patch  0016-configure-try-the-chatmail-relay-default-before-auto.patch  0017-chatlist-refresh-a-contact-s-1-1-item-when-they-beco.patch  0018-jsonrpc-emit-events-when-stockstrings-change-so-lang.patch  0019-event-add-DownloadProgress-for-chunked-message-downl.patch  0019-group-admins-admin-groups-where-only-the-creator-man.patch  0019-pre-message-real-mimetype-and-thumbnail-preview-in-m.patch  0019-wasm-report-account-storage-size-db-via-PRAGMA-blobs.patch  (+1 more)
scripts/: apply-patches.sh  bench-core-wasm.mjs  check-calls-engine-boundary.mjs  gen-calls-fixtures.mjs  make-icons.mjs  make-maskable-icon.mjs  repro-calls-video-entry.ts  repro-calls-video.mjs  serve-example.mjs  set-release-version.mjs  shot-group-admins.mjs  shot-relay-picker.mjs  shot-transports-relay.mjs  shot-voice-player.mjs  smoke-boot-error.mjs  smoke-core-wasm.mjs  smoke-web-app.mjs  test-account-churn-e2e.mjs  test-account-ids-e2e.mjs  test-bridge-dialog.mjs  test-calls-e2e.mjs  test-export-chat-html.mjs  test-group-admins-e2e.mjs  test-imex.mjs  test-link-preview-e2e.mjs  test-networking.mjs  test-persistence.mjs  test-pwa-hard-reload.mjs  test-pwa-offline.mjs  test-pwa-update.mjs  test-read-aloud-e2e.mjs  test-read-time-e2e.mjs  test-relay-picker.mjs  test-two-tabs.mjs  test-txedit-e2e.mjs  test-unfurl.mjs  test-web-app-e2e.mjs  test-web-app-imex.mjs  test-webimap.mjs  test-webxdc-isolation.mjs  (+5 more)
vendor-crates/astral-tokio-tar/: Cargo.toml
vendor-crates/astral-tokio-tar/src/: archive.rs  builder.rs  entry.rs  entry_type.rs  header.rs  pax.rs
(+123 files in other folders)
